Checking to ensure that the build date is in the manifest file